--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "build": "next build",
+    "build:static": "pnpm build && node scripts/export-to-out.cjs",
     "dev": "next dev",
     "lint": "next lint",
     "start": "next start"
@@ -63,6 +64,7 @@
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "fs-extra": "^11.3.0",
     "postcss": "^8.5",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
